--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,11 @@
       <version>1.2.17</version>
     </dependency>
 
-
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.10.8</version>
+    </dependency>
   </dependencies>
 
   <build>
